# my-cpp-starter

./: CMakeLists.txt  Dockerfile  README.md  build-and-run-codecov.sh
.github/workflows/: CI.yml
include/: my-lib.hpp
include/my-module/: my-header.hpp
include/utils/: macros.h
scripts/ci/: Dockerfile.base  action.yml
src/: my-header.hpp
tests/: CMakeLists.txt  test1.cpp  test2.cpp
tests/ci/: Dockerfile  Dockerfile.base  action.yml  ci.sh  entrypoint.sh
tests/src/: test1.cpp  test2.cpp
